force-app/main/default/objects/Commitment_Process__c/Commitment_Process__c.object-meta.xml
<CustomObject>
    <description>Service commitment process tied to an Entitlement. Analogous to an Entitlement Process, stored as data.</description>
    <label>Commitment Process</label>
    <nameField>
        <displayFormat>CP-{00000}</displayFormat>
        <label>Process Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Commitment Processes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>