force-app/main/default/objects/Commitment_Process__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account copied from the Entitlement for reporting.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Commitment Processes</relationshipLabel>
    <relationshipName>Commitment_Processes</relationshipName>
    <type>Lookup</type>
</CustomField>