force-app/main/default/objects/Commitment_Process__c/fields/Commitment_Type__c.field-meta.xml
<CustomField>
    <fullName>Commitment_Type__c</fullName>
    <label>Commitment Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SLA</fullName>
                <default>true</default>
                <label>SLA</label>
            </value>
            <value>
                <fullName>Volume</fullName>
            </value>
            <value>
                <fullName>Service Level</fullName>
            </value>
            <value>
                <fullName>On-Time Delivery</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>