force-app/main/default/objects/Commitment_Process__c/fields/Entitlement__c.field-meta.xml
<CustomField>
    <fullName>Entitlement__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Entitlement this commitment process implements.</description>
    <label>Entitlement</label>
    <referenceTo>Entitlement</referenceTo>
    <relationshipLabel>Commitment Processes</relationshipLabel>
    <relationshipName>Commitment_Processes</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>