force-app/main/default/objects/Commitment_Process__c/validationRules/End_After_Start.validationRule-meta.xml
<ValidationRule>
    <fullName>End_After_Start</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISBLANK(End_Date__c)) &amp;&amp; End_Date__c &lt; Start_Date__c</errorConditionFormula>
    <errorDisplayField>End_Date__c</errorDisplayField>
    <errorMessage>End Date must be on or after Start Date.</errorMessage>
</ValidationRule>